edited readme & fixed index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uz">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Konn</title>
+    <meta
+      name="description"
+      content="Konn: Create and manage a single page for all your links"
+    />
+    <meta property="og:title" content="Konn - Barcha havolalaringiz bitta sahifada!" />
+    <meta
+      property="og:description"
+      content="Barcha havolalaringiz uchun bitta sahifa yarating va boshqaring"
+    />
+
+    <link rel="canonical" href="https://konn.uz" />
+    <meta name="keywords" content="link manager" />
+    <title>Konn - Barcha havolalaringiz bitta sahifada!</title>
   </head>
   <body>
     <div id="root"></div>
