test component added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
 
     <link rel="canonical" href="https://konn.uz" />
-    <meta name="keywords" content="link manager" />
+    <meta name="keywords" content="link manager, havola, sahifa, ijtimoiy tarmoqlar" />
     <title>Konn - Barcha havolalaringiz bitta sahifada!</title>
   </head>
   <body>
