fixed: package.json

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="description"
-      content="Konn: Create and manage a single page for all your links"
+    name="description"
+    content="Konn: Create and manage a single page for all your links"
     />
     <meta property="og:title" content="Konn - Barcha havolalaringiz bitta sahifada!" />
     <meta
-      property="og:description"
-      content="Barcha havolalaringiz uchun bitta sahifa yarating va boshqaring"
+    property="og:description"
+    content="Barcha havolalaringiz uchun bitta sahifa yarating va boshqaring"
     />
-
-    <link rel="canonical" href="https://konn.uz" />
+    
     <meta name="keywords" content="link manager, havola, sahifa, ijtimoiy tarmoqlar" />
+    <link rel="shortcut icon" href="/public/icons/favicon.png" type="image/x-icon">
+    <link rel="canonical" href="https://konn.uz" />
     <title>Konn - Barcha havolalaringiz bitta sahifada!</title>
   </head>
   <body>
