--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="uz">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-    name="description"
-    content="Konn: Create and manage a single page for all your links"
+      name="description"
+      content="Barcha havolalaringiz uchun bitta sahifa yarating va boshqaring"
     />
     <meta property="og:title" content="Konn - Barcha havolalaringiz bitta sahifada!" />
     <meta
-    property="og:description"
-    content="Barcha havolalaringiz uchun bitta sahifa yarating va boshqaring"
+      property="og:description"
+      content="Barcha havolalaringiz uchun bitta sahifa yarating va boshqaring"
     />
-    
     <meta name="keywords" content="link manager, havola, sahifa, ijtimoiy tarmoqlar" />
-    <link rel="shortcut icon" href="/public/icons/favicon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon" />
     <link rel="canonical" href="https://konn.uz" />
     <title>Konn - Barcha havolalaringiz bitta sahifada!</title>
   </head>
