--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/icons/logo.png" type="image/x-icon" />
     <link rel="canonical" href="https://konn.uz" />
     <title>Konn - Barcha havolalaringiz bitta sahifada!</title>
   </head>
