--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,17 @@
 <!doctype html>
-<html lang="uz" class="dark">
+<html lang="ru" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Barcha havolalaringiz uchun bitta sahifa yarating va boshqaring"
+      content="Создайте и управляйте одной страницей для всех ваших ссылок"
     />
-    <meta property="og:title" content="Konn - Barcha havolalaringiz bitta sahifada!" />
+    <meta property="og:title" content="Konn - Все ваши ссылки на одной странице!" />
     <meta
       property="og:description"
-      content="Barcha havolalaringiz uchun bitta sahifa yarating va boshqaring"
+      content="Создайте и управляйте одной страницей для всех ваших ссылок"
     />
-    <meta name="keywords" content="link manager, havola, sahifa, ijtimoiy tarmoqlar" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +20,7 @@
     />
     <link rel="shortcut icon" href="/icons/logo.png" type="image/x-icon" />
     <link rel="canonical" href="https://konn.uz" />
-    <title>Konn - Barcha havolalaringiz bitta sahifada!</title>
+    <title>Konn - Все ваши ссылки на одной странице!</title>
   </head>
   <body>
     <div id="root"></div>
